# testRSSDK

./: CMakeLists.txt
cmake/modules/: FindRSSDK.cmake
src/: main.cpp
